kong-istio/notification-istio-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-destination-rule
  namespace: notification
spec:
  host: notification-service
  # trafficPolicy:
  #   loadBalancer:
  #     simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
